--- a/package.json
+++ b/package.json
@@ -1,24 +1,66 @@
 {
-  "name": "anindo",
+  "name": "anindo-nextjs",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 5000",
+    "lint": "next lint",
+    "test": "yarn build && yarn start",
+    "typeorm": "typeorm-ts-node-esm"
   },
   "dependencies": {
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "@google-cloud/storage": "^7.14.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "crisp-sdk-web": "^1.0.25",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
+    "firebase": "^11.0.2",
+    "input-otp": "^1.4.1",
+    "lucide-react": "^0.460.0",
+    "next": "15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.1.0",
+    "react-flatpickr": "^3.10.13",
+    "react-multi-email": "^1.0.25",
+    "shadcn-ui": "^0.9.3",
+    "switch": "^0.0.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
+    "url-parse": "^1.5.10",
+    "vaul": "^1.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.2",
+    "@types/node": "^22.9.1",
+    "@types/react": "^18.3.12",
+    "@types/react-flatpickr": "^3.8.11",
+    "@types/url-parse": "^1.4.11",
+    "eslint": "^9.12.0",
+    "eslint-config-next": "14.2.7",
+    "eslint-plugin-jsdoc": "^50.2.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "5.6.3"
   }
 }
