--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev -p 5000",
+    "dev": "next dev -p 5000 -H 192.168.1.69",
     "build": "next build",
     "start": "next start -p 5000",
     "lint": "next lint",
